# Scantelligent

./: .gitignore  .gitmodules  Scantelligent.code-workspace  Scantelligent.py  Scantelligent_app.py  Tests.ipynb  camera_viewer.ipynb  main.py  pyproject.toml  scantelligent_control.ipynb
experiments/: MLA_mapping.py  __init__.py  auto_approach.py  auto_poking.py  capacitive_walk.py  capacitive_walk_2.py  dIdV_mapping.py  dIdV_maps.py  demo_experiment.py  demo_experiment2.py  experiment_1.py  explore.py  measure_drift.py  mla_init.py  nanonis_scan.py  nn_scan.py  nn_spectroscopy.py  nn_spectrum.py  scan.py  spectroscopy.py
icons/: stop_osc
lib/: Scantelligent.code-workspace  Spectelligent.py  __init__.py  api_camera.py  api_keithley.py  api_mla.py  api_nanonis.py  audio_generator.py  base_experiment.py  data_processing.py  experiment_1.py  file_functions.py  functions.py  functions_old.py  gui_functions.py  gui_items.py  gui_scantelligent.py  gui_spectelligent.py  hw.py  hw_camera.py  hw_keithley.py  hw_nanonis.py  image_functions.py  nanonis.py  parameter_manager.py  sct_widgets.py  st_widgets.py  threading.py
macros/: test1.txt
scantelligent/: __init__.py  config.yml  control.py  functions.py  hardware.py  hw.py  image_functions.py
sys/: LUTs.hdf5  TIA_corrections.hdf5  config.yml  parameters.yml  user_parameters.yml
